Fixed small error for profile page when viewing on tablet device

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1856,7 +1856,7 @@ button.accordion-button.collapsed{
     border-bottom: 2px solid black;
     border-right: 2px solid black;
     text-align: center;
-    padding: 1rem 2.5rem;
+    padding: 1rem 2.4rem;
 }
 
 .created-profile-options{
